--- a/index.html
+++ b/index.html
@@ -5,41 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介ページ</title>
-    <link rel="stylesheet" href=" css/style.css">
 </head>
 <body>
     <header>
         <div class="top">
-            <img src="/img/profile.png" id="icon">
+            <img src="./img/profile.png" id="icon">
             <span id="myname">永井大地</span>
-            <nav>
-<ul>
-    <li><a href="#">HOME</a></li>
-    <li><a href="https://twitter.com/home?lang=ja" target="_blank">Twitter</a></li>
-    <li><a href="https://ja-jp.facebook.com/" target="_blank">Facdbook</a></li>
-    <li><a href="https://www.instagram.com/" target="_blank">instagram</a></li>
-</ul>
-
-            </nav>
-            
+        <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="https://twitter.com/home?lang=ja" target="_blank">Twitter</a></li>
+                <li><a href="https://ja-jp.facebook.com/" target="_blank">Facebook</a></li>
+                <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+            </ul>
+        </nav>
         </div>
-    </header>
-    <div class="container">
-     <h2>自己紹介</h2>
-        <div class="profile">
-    <p>ここに自己紹介文が入ります。<br>
-        今までの経験やキャリアを記載するのもいいですし、<br>
-        趣味や好きな食べ物などを記載するのもいいでしょう！
-    </p>
-<hr>
-<P>1988年10月8日生まれ</P>
-<P>長野件上田市出身</P>
-<p>城西国際大学</p>        
-</div>
-    </div>
-<footer>
-    <p>&copy2022 Nagai Daichi</p>
-</footer>
-</body>
 
+    </header>
+    
+</body>
 </html>
