--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介ページ</title>
+<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -20,8 +21,22 @@
             </ul>
         </nav>
         </div>
-
     </header>
-    
+    <div class="container">
+        <h2>自己紹介</h2> 
+        <div class="profile">
+            <p>ここに自己紹介が入ります。<br>
+                今までの経歴やキャリアを記載するのもいいですし、<br>
+                趣味や好きな食べ物などを記載するのもいいでしょう！
+            </p>
+            <hr>
+            <p>2022年10月8日</p>
+            <p>長野県上田市出身</p>
+            <p>城西国際大学</p>
+        </div>
+    </div>
+    <footer>
+        <p>&copy;2022 D.nagai</p>
+    </footer>
 </body>
 </html>
