--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <div class="top"> 
         <img src="./img/profile.png" id="icon" >
-    <span>永井大地</span>
+    <span id="myname">永井大地</span>
     
     <nav>
         <ul>
@@ -24,7 +24,7 @@
     </div>
     </header>
 
-    <div class="containar">
+    <div class="container">
         <h2>自己紹介</h2>
         <div class="profile">
   <P>
