--- a/index.html
+++ b/index.html
@@ -5,42 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介ページ</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<link rel="stylesheet" href="./css/style.css">
 <body>
     <header>
         <div class="top">
-            <img src="./img/profile.png" id="icon">
-            <span id="myname">永井大地</span>
-
-            <nav>
+            <img src="./img/profile.png" id="icon" >
+        <span id="myname">永井大地</span> 
+        
+        <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="https://twitter.com/home?lang=ja" target="_blank">Twitter</a></li>
-                <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+                <li><a href="https://ja-jp.facebook.com/" target="_blank">Facebook</a></li>
                 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-            </nav>
-        </ul>
-    </div>
+            </ul>
+        </nav>   
+        </div>
     </header>
 
     <div class="container">
         <h2>自己紹介</h2>
         <div class="profile">
-        <p>
-            ここに自己紹介が入ります。<br>
-            今までの経歴やキャリアを入れるのもいいですし、<br>
-            趣味や好きな食べ物などを記載するのもいいでしょう！          
-        </p>
-      <hr>
-      <p>2022年10月8日生まれ</p>
-      <p>長野県上田市出身</p>
-      <p>城西国際大学</p>
+            <p>
+                ここに自己紹介が入ります。<br>
+                今までの経歴やキャリアを記載するのもいいです、<br>
+                趣味や好きな食べ物などを記載するのもいいでしょう！
+            </p>
+            <hr>
+            <p>2022年10月8日生まれ</p>
+            <p>長野県上田市出身</p>
+            <p>城西国際大学卒業</p>
+        </div>
     </div>
-</div>
-        
-<footer>
-<p>&copy;2022 D.Nagai</p>
-</footer>
+
+    <footer>
+        &copy; 2022 D.Nagai
+    </footer>
 </body>
 </html>
